infrastructure/base/cloudflared/cloudflared.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared-system
  labels:
    networking.tinyrack.net/isolation: enabled
